--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -91,11 +91,11 @@
 .inner_content .breadcrumb .breadcrumb_current::before{content: ""; display: block; clear: both; width: 10px; height: 16px; margin: 0 12px; position: absolute;left: 0;top: 50%; transform: translateY(-50%); background-repeat: no-repeat; background-position: center; background-image: url("data:image/svg+xml,%0A%3Csvg width='10' height='16' viewBox='0 0 7 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.90625 5.1875C6.09375 5.375 6.09375 5.71875 5.90625 5.90625L0.90625 10.9062C0.71875 11.0938 0.375 11.0938 0.1875 10.9062C0 10.7188 0 10.375 0.1875 10.1875L4.84375 5.53125L0.1875 0.90625C0 0.71875 0 0.375 0.1875 0.1875C0.375 0 0.71875 0 0.90625 0.1875L5.90625 5.1875Z' fill='%236E6E6E'/%3E%3C/svg%3E%0A");}
 
 /* 탭 메뉴 */
-.inner_tab_panel{display: none;}
+.inner_tab_panel{display: none; max-width: 1560px; margin: 0 auto;}
 .inner_tab_panel.is-active{display: block;}
 .inner_content .inner_tab .inner_tab_list{display: flex;flex-wrap: nowrap;}
 .inner_content .inner_tab .inner_tab_list .inner_tab_item{display: flex;flex-wrap: nowrap;}
-.inner_content .inner_tab .inner_tab_list .inner_tab_item span{display:block;font-size: var(--font16);line-height: 20px; font-weight: 500; color: var(--black);border-radius: 60px;box-sizing: border-box;padding: 14px 28px;}
+.inner_content .inner_tab .inner_tab_list .inner_tab_item span{display:block;font-size: var(--font16);line-height: 20px; font-weight: 500; color: var(--black);border-radius: 60px;box-sizing: border-box;padding: 14px 28px;cursor: pointer;}
 .inner_content .inner_tab .inner_tab_list .inner_tab_item.is-active span{color: var(--white);background-color: var(--black);}
 
 /* 검색창 */
