--- a/pub/css/pr_center.css
+++ b/pub/css/pr_center.css
@@ -8,7 +8,7 @@
 /* 메인 비주얼 */
 .visual_inner{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") center / cover  no-repeat; max-width: 1680px;height: 452px;}
 /*  리스트  */
-.pr_list_panels{margin: 36px 120px 0;max-width: 1560px;box-sizing: border-box;}
+.pr_list_panels{margin: 36px 120px 0;box-sizing: border-box;}
 .pr_list {display: flex;gap: 24px;flex-direction: column;}
 .pr_item_thumb {flex: 0 0 504px;display: flex;align-items: center;justify-content: center;}
 .pr_item_thumb img {display: block; max-width: 100%;height: auto;border-radius: 24px;}
@@ -19,14 +19,14 @@
 .pr_list_section .pr_item_desc {display: block;display: -webkit-box;font-size: var(--font18);line-height: 30px;margin-top: 12px;text-overflow: ellipsis;overflow: hidden; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .pr_list_section .pr_item_date {font-size: var(--font16);line-height: 20px;margin-top: 24px;text-overflow: ellipsis;}
 .pr_list_more {text-align: center;padding: 36px 0 0;}
-.btn_more span {display:block;border-radius: 60px;border: 1px solid var(--black);background: var(--white);font-size: var(--font18);line-height: 22px;font-weight: 500;cursor: pointer;padding: 18px 32px; box-sizing: border-box;}
-
+.btn_more span {display:block;border-radius: 60px;border: 1px solid var(--black);background: var(--white);font-size: var(--font18);line-height: 22px;font-weight: 500;cursor: pointer;padding: 16px 32px; box-sizing: border-box;}
 
 @media (max-width:1228px) {
   .contents.pr_wrap{padding-bottom: 64px;}
   .visual_inner{background: url("../../pub/images/pr/pr_exh_visual_tbl.png") center / cover  no-repeat; max-width: 1680px;height: 226px;}
   .pr_list_panels{margin: 36px 38px 0;}
   .pr_item_thumb{flex: 0 0 338px;}
+  .pr_item_thumb img{border-radius: 16px;}
   .pr_list_section .pr_item_body{padding: 14px 0;}
   .pr_list_section .pr_item_link {gap: 16px;}
   .pr_list_section .pr_item_category {font-size:var(--font14);line-height: 18px;}
@@ -36,12 +36,14 @@
   .pr_list_more {text-align: center;padding: 32px 0 0;}
   .btn_more span {font-size: var(--font16);line-height: 20px;padding: 14px 26px; }
 }
+
 @media (max-width:768px) {
   .contents.pr_wrap{padding-bottom: 36px;}
   .visual_inner{background: url("../../pub/images/pr/pr_exh_visual_mo.png") center / cover  no-repeat; max-width: 1680px;height: 136px;}
   .inner_content .inner_tab .inner_tab_list .inner_tab_item span{padding: 10px 20px;}
   .pr_list_panels{margin: 24px 24px 0;}
   .pr_item_thumb{flex: 1;}
+  .pr_item_thumb img{border-radius: 12px;}
   .pr_list_section .pr_item_body{padding: 0;}
   .pr_list_section .pr_item_link {gap: 12px;flex-direction: column;}
   .pr_list_section .pr_item_category {font-size: 13px;line-height: 18px;}
@@ -51,29 +53,45 @@
   .pr_list_more {text-align: center;padding: 16px 0 0;}
   .btn_more span {font-size: var(--font16);line-height: 18px;padding: 12px 22px; }
 
-
-
 }
 
 
 /* ------------------------------
     홍보센터 카탈로그
   ------------------------------ */
-
+.pr_list_section--catalog .catalog-list {list-style: none;display: grid;grid-template-columns: repeat(3, minmax(0, 1fr));gap: 24px;}
+.pr_list_section--catalog .catalog-item {background: #fff;border-radius: 24px;padding: 36px;border:1px solid #E2E2E2; box-sizing: border-box;}
+.pr_list_section--catalog .catalog-info {display: flex;gap: 24px;font-size: var(--font16);line-height: 20px;margin-top: 24px;text-overflow: ellipsis;}
+.pr_list_section--catalog .catalog-info span {position: relative;}
+.pr_list_section--catalog .catalog-info span:not(:last-child)::after {content: '|';position: absolute;right: -13px;}
+.pr_list_section--catalog .download-button {margin-top: 48px;box-sizing: border-box;}
+.pr_list_section--catalog .download-button span{display: inline-block;padding: 17px 32px;font-size: var(--font18);font-weight:500;border: 1px solid #000;border-radius: 60px;background: var(--white);color: var(--black);cursor: pointer;transition: all 0.2s;box-sizing: border-box;}
 
 
 @media (max-width:1228px) {
+  .pr_list_section--catalog .catalog-list {grid-template-columns: repeat(2, minmax(0, 1fr));}
+  .pr_list_section--catalog .catalog-item {padding: 24px;border-radius: 16px;}
+  .pr_list_section--catalog .catalog-info{font-size: var(--font14); margin-top: 16px;}
+  .pr_list_section--catalog .download-button{margin-top: 36px;}
+  .pr_list_section--catalog .download-button span{font-size: var(--font16);line-height: 20px;padding: 14px 26px;}
 
 }
+
+
 @media (max-width:768px) {
+  .pr_list_section--catalog .catalog-list {grid-template-columns: 1fr;}
+  .pr_list_section--catalog .catalog-item {padding: 16px;border-radius: 12px;}
+  .pr_list_section--catalog .catalog-info{font-size:13px; margin-top: 12px;}
+  .pr_list_section--catalog .download-button{margin-top: 24px;}
+  .pr_list_section--catalog .download-button span{font-size: var(--font14);line-height: 18px;padding: 12px 22px;}
 
 }
+
 
 
 /* ------------------------------
     홍보센터 뉴스
   ------------------------------ */
-.pr_list_section--news{}
 .pr_list_section--news .pr_list{flex-wrap: wrap;gap: 24px;flex-direction: row;}
 .pr_list_section--news .pr_item {flex: 0 0 calc((100% - 24px * 2) / 3); box-sizing: border-box;}
 .pr_list_section--news .pr_item_link {display: flex;flex-direction: column;height: 100%;}
