--- a/pub/css/modal.css
+++ b/pub/css/modal.css
@@ -1,17 +1,13 @@
 /* --------------------
-  Reset CSS
-  -------------------- */
-@import url(./reset.css);
-@import url(./common.css);
-
-
-/* --------------------
     Modal Practice
    -------------------- */
+body.no-scroll {overflow: hidden;}
+.modal_overlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:#0009;z-index:9;}
+.modal_overlay.is-open{display:flex;}
+
 .modal_divider{margin:64px 0;border:0;border-top:1px solid #e2e2e2;}
-.modal_overlay{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#0009;);z-index:9;}
-.modal_practice{position:relative;width:100%;max-width:1296px;max-height:calc(100vh - 48px);margin: 38px;box-sizing: border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow-y: auto}
-.modal_header{ position: sticky;top: 0;z-index: 12;height: 48px;background: #fff;display: flex;align-items: center;justify-content: flex-end;padding-top: 24px;box-sizing: border-box;}
+.modal_practice{position:relative;width:100%;max-width:1296px;max-height:calc(100vh - 206px);margin: 38px;box-sizing: border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow-y: auto}
+.modal_header{ position: sticky;top: 0;z-index: 12;height: 48px;background: #fff;display: flex;align-items: center;justify-content: flex-end;padding: 24px 24px 0;box-sizing: border-box;}
 .modal_practice .modal_close{width: 48px;height: 48px;background: url("../images/modal_img/ico_close_btn.png") 100% / 100% no-repeat;border: none;}
 .modal_content{overflow-y: auto;padding: 0 64px 64px 64px;box-sizing: border-box;}
 .modal_practice .quality_modal_top{display:flex;gap:24px;justify-content: space-between;}
@@ -47,7 +43,7 @@
 /* --------------------
    Responsive
    -------------------- */
-@media (min-width:768px) and (max-width:1228px) {
+@media (max-width:1228px) {
   /* 품질경영시스템 */
   .modal_divider{margin: 36px 0;}
   .modal_practice{margin-top: 56px;}
