--- a/pub/css/modal.css
+++ b/pub/css/modal.css
@@ -6,7 +6,7 @@ body.no-scroll {overflow: hidden;}
 .modal_overlay.is-open{display:flex;}
 
 .modal_divider{margin:64px 0;border:0;border-top:1px solid #e2e2e2;}
-.modal_practice{position:relative;width:100%;max-width:1296px;max-height:calc(100vh - 206px);margin: 38px;box-sizing: border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow-y: auto}
+.modal_practice{position:relative;width:calc(100% - 48px);max-width:1296px;max-height:calc(100vh - 206px);margin: 38px auto;box-sizing: border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow-y: auto}
 .modal_header{ position: sticky;top: 0;z-index: 12;height: 48px;background: #fff;display: flex;align-items: center;justify-content: flex-end;padding: 24px 24px 0;box-sizing: border-box;border-top-left-radius: 18px;border-top-right-radius: 18px;}
 .modal_practice .modal_close{width: 48px;height: 48px;background: url("../images/modal_img/ico_close_btn.png") 100% / 100% no-repeat;border: none;}
 .modal_content{overflow-y: auto;padding: 0 64px 64px 64px;box-sizing: border-box;}
@@ -60,6 +60,36 @@ body.no-scroll {overflow: hidden;}
 .rnd_wrap .swiper-button-next::after{display: none;}
 .rnd_wrap .swiper-button-next::before{display: block;content: "";width: 52px;height: 52px;background-size: 52px 52px;background-repeat: no-repeat;background-position: center;background-image: url("../images/rnd/ico_arr_defualt.png");}
 
+/*  개인정보 모달창  */
+/* 공통 모달(오버레이 + 중앙 정렬) */
+.modal_overlay{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,.35);z-index:9999;}
+.modal_overlay.is-open{display:block;}
+
+body.no-scroll{overflow:hidden;}
+
+/* 개인정보 모달 */
+.modal_practice.modal_private{position:relative;width:min(1200px, calc(100% - 48px));margin:100px auto;background:#fff;border-radius:20px;box-sizing:border-box;}
+.modal_practice.modal_private .modal_close{position:absolute;top:24px;right:24px;width:40px;height:40px;border:none;background:transparent;cursor:pointer;}
+.modal_practice.modal_private .modal_close::before,
+.modal_practice.modal_private .modal_close::after{content:"";position:absolute;left:50%;top:50%;width:18px;height:2px;background:var(--black);transform-origin:center;}
+.modal_practice.modal_private .modal_close::before{transform:translate(-50%,-50%) rotate(45deg);}
+.modal_practice.modal_private .modal_close::after{transform:translate(-50%,-50%) rotate(-45deg);}
+.private_title{font-size:var(--font16);font-weight:700;line-height:26px;}
+.private_section p{font-size:var(--font16);line-height:22px;}
+.private_subtitle{font-size:var(--font16);line-height:22px;margin-top: 24px;}
+
+.private_ol{margin-top:10px;}
+.private_ol > li{font-size:14px;line-height:26px;}
+.private_ul{padding-left:24px;box-sizing: border-box;}
+.private_ul > li{font-size:14px;line-height:26px;list-style:disc;}
+
+
+/* 태블릿 */
+@media (min-width:768px) and (max-width:1228px){
+
+}
+
+
 /* --------------------
    Responsive
    -------------------- */
@@ -67,7 +97,7 @@ body.no-scroll {overflow: hidden;}
   /* 품질경영시스템 */
   .modal_divider{margin: 36px 0;}
   .modal_practice{margin-top: 56px;}
-  .modal_header{padding-top: 8px; padding-right: 12px;}
+  .modal_practice.modal_private .modal_header{padding-top: 8px; padding-right: 12px;}
   .modal_practice .modal_close{width: 40px;height: 40px;}
   .modal_practice .quality_modal_subtitle{margin-top: 16px;}
   .modal_content{padding: 0 36px 36px 36px;}
@@ -95,6 +125,11 @@ body.no-scroll {overflow: hidden;}
   .rnd_wrap .swiper-button-next::before{width: 44px;height: 44px;background-size: 44px 44px;}
   .rnd_wrap .rnd_modal_swiper .swiper-pagination-bullet{width: 8px;height: 8px;}
 
+  /* 개인정보 모달 */
+  .modal_practice.modal_private{width:calc(100% - 76px);margin:80px auto;border-radius:18px;}
+  .modal_practice.modal_private .modal_close{right:24px;top:18px;}
+  .modal_practice.modal_private .modal_content{padding-bottom: 64px;}
+  .modal_private .modal_header{padding: 36px 36px 0;}
 
 }
 
@@ -126,5 +161,7 @@ body.no-scroll {overflow: hidden;}
   .rnd_wrap .swiper-button-next{display: none;}
   .rnd_wrap .rnd_modal_swiper .swiper-pagination-bullet{width: 6px;height: 6px;}
 
+  /* 개인정보 모달 */
+  .modal_practice.modal_private .modal_close{top: 12px;right: 12px;}
 }
 
