--- a/pub/css/modal.css
+++ b/pub/css/modal.css
@@ -6,10 +6,16 @@ body.no-scroll {overflow: hidden;}
 .modal_overlay.is-open{display:flex;}
 
 .modal_divider{margin:64px 0;border:0;border-top:1px solid #e2e2e2;}
-.modal_practice{position:relative;width:calc(100% - 48px);max-width:1296px;max-height:calc(100vh - 206px);margin: 38px auto;box-sizing: border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow-y: auto}
+
+.modal_practice{position:relative;display:flex;flex-direction:column;width:calc(100% - 48px);max-width:1296px;max-height:calc(100vh - 206px);margin:38px auto;padding-bottom: 12px;box-sizing:border-box;border-radius:18px;background:#fff;box-shadow:0 18px 45px rgba(0,0,0,.12);z-index:10;overflow:hidden;}
 .modal_header{ position: sticky;top: 0;z-index: 12;height: 48px;background: #fff;display: flex;align-items: center;justify-content: flex-end;padding: 24px 24px 0;box-sizing: border-box;border-top-left-radius: 18px;border-top-right-radius: 18px;}
 .modal_practice .modal_close{width: 48px;height: 48px;background: url("../images/modal_img/ico_close_btn.png") 100% / 100% no-repeat;border: none;}
-.modal_content{overflow-y: auto;padding: 0 64px 64px 64px;box-sizing: border-box;}
+.modal_content{overflow-y:auto;scrollbar-gutter:stable;scrollbar-width:thin;scrollbar-color:rgba(0,0,0,.25) transparent;padding:0 64px 64px;box-sizing:border-box;width:calc(100% - 4px);margin-right:16px;}
+.modal_content::-webkit-scrollbar{width:10px;}
+.modal_content::-webkit-scrollbar-track{background:transparent;}
+.modal_content::-webkit-scrollbar-thumb{background:rgba(0,0,0,.25);border-radius:999px;border:3px solid transparent;background-clip:content-box;}
+.modal_content::-webkit-scrollbar-thumb:hover{background:rgba(0,0,0,.35);border:3px solid transparent;background-clip:content-box;}
+
 .modal_practice .quality_modal_top{display:flex;gap:24px;justify-content: space-between;}
 .modal_practice .quality_modal_subtitle{margin:28px 0 16px;font-size:var(--font24);font-weight:700;line-height:30px;color:var(--black);}
 .modal_practice .quality_modal_title{margin-bottom:36px;font-size:var(--font48);font-weight:700;letter-spacing:-.5px;}
